--- a/SampleApp/app/src/main/AndroidManifest.xml
+++ b/SampleApp/app/src/main/AndroidManifest.xml
@@ -20,5 +20,5 @@
             </intent-filter>
         </activity>
     </application>
-
+<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
 </manifest>
